--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ ul {
 
 .text {
     margin-left: 20px;
+    cursor: default;
 }
 
  /*aqui va al diseño de los juegos que aparecen en la pagina*/
@@ -129,6 +130,7 @@ h4 {
     align-items: center;
     display: flex;
     flex-wrap: wrap;
+    cursor: pointer;
 }
 
 .juego_info {
@@ -151,4 +153,25 @@ h4 {
     box-shadow: 0px 0px 5px gray;
     margin-right: 20px;
     width: 75px;
+}
+
+/*anuncios*/
+#anuncio {
+    margin-top: 80px;
+    width: 1335px;
+    padding: 15px;
+    border-radius: 20px;
+    cursor: pointer;
+}
+#anuncio2 {
+    margin-top: 80px;
+    width: 1335px;
+    height: 338px;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.anuncio {
+    width: 100%;
+    border-radius: 20px;
 }
