--- a/style.css
+++ b/style.css
@@ -10,6 +10,13 @@ body {
     font-size: 15px;
 }
 
+ul {
+    display: flex;
+}
+
+li {
+    cursor: pointer;
+}
 /*header*/
 #head {
     display: flex;
@@ -28,13 +35,12 @@ body {
     margin-right: 20px;
 }
 
-ul {
-    display: flex;
+.ul {
+
     flex: 2;
 }
 
 .opciones {
-    cursor: pointer;
     list-style-type: none;
     margin: 20px;
     transition: 0.3s;
@@ -64,7 +70,7 @@ ul {
     margin: 5px;
     padding: 5px;
     border: none;
-    cursor: pointer;
+
     transition: 0.3s;
 }
 
@@ -120,6 +126,7 @@ ul {
 
 #container {
     margin-left: 60px;
+    margin-right: 60px;
 }
 
 #container p {
@@ -196,8 +203,6 @@ h4 {
     border-radius: 20px;
 }
 
-
-
 #anuncio2 {
     width: 100%;
     height: 100%;
@@ -262,11 +267,22 @@ h4 {
     width: 200px;
     color: black;
     cursor: pointer;
+    transition: 0.3s;
 }
+
+.btn_descargar:hover {
+    background-color: #1ec588;
+}
+
 /*footer*/
 
 footer {
-    margin-right: 100px;
+    margin-right: 20px;
+}  
+/*footer*/
+
+footer {
+    margin-right: 20px;
     margin-left: 20px;
 }
 
@@ -289,6 +305,10 @@ footer {
     color: #808694;
 }
 
+.pay:hover {
+    color: #1ba572;
+}
+
 .one {
     flex: 1;
     margin-bottom: 20px;
@@ -301,14 +321,21 @@ footer {
 #info {
     display: flex;
     align-items: center;
-    font-size: 12px;
+    margin-bottom: 30px;
+    flex-wrap: wrap;
+    font-size: 14px;
 }
 
-.info {
-    font-size: 11px;
-    flex: 1;
+.list_info {
+    font-size: 14px;
+    list-style: none;
+    flex: 2;
 }
 
-.cont_lang {
-    font-size: 12px;
+.google_extra {
+    margin-right: 20px;
+}
+
+.google_extra:hover {
+    color: #1ba572;
 }
